test/fails/bad_functions/return_type6.lgl
vec2 f() {
    return [1., 1.];
}

vec3 g() {
    return [1., 2., 3.];
}

void main() {
    print f() + g();
    return;
}